# movies_local

./: README.md
backend/: Cargo.toml
backend/src/: error.rs  main.rs  models.rs  storage.rs
frontend/: app.js  index.html  styles.css
